Get Started Button Mobile Fix

--- a/emails/elnaz/auto-responder/Ryan/download trial details desk.html
+++ b/emails/elnaz/auto-responder/Ryan/download trial details desk.html
@@ -174,13 +174,14 @@
 
 
                             <!-- Get Started Button -->
-                            <table class="row text-size-13 mt-10 mb-0">
+                            <table class="row text-size-13 mt-10">
                                 <tr>
-                                    <td class="wrapper last valign-middle">
+                                    <td class="wrapper last">
+
                                         <table class="twelve columns">
                                             <tr>
                                                 <td class="center">
-                                                    <table class="button button-blue button-width-auto mt-5 mb-0">
+                                                    <table class="button button-blue button-width-auto mt-10 mb-0">
                                                         <tr>
                                                             <td>
                                                                 <a href="#">Get Started</a>
@@ -188,8 +189,10 @@
                                                         </tr>
                                                     </table>
                                                 </td>
+                                                <td class="expander"></td>
                                             </tr>
                                         </table>
+
                                     </td>
                                 </tr>
                             </table>
