a new email template

--- a/emails/elnaz/auto-responder/Ryan/download-doc-desk.html
+++ b/emails/elnaz/auto-responder/Ryan/download-doc-desk.html
@@ -23,7 +23,7 @@
                                         <table class="twelve columns">
                                             <tr>
                                                 <td class="text-pad pt-10">
-                                                    <h1 class="mb-30">10 Easy Steps to Secure Your Small business</h1>
+                                                    <h1>10 Easy Steps to Secure Your Small business</h1>
 
                                                     <p>Thank you for your interest. You can download your white paper below.</p>
                                                 </td>
@@ -68,14 +68,21 @@
                                                 </td>
                                                 <td class="expander"></td>
                                             </tr>
+                                            <tr>
+                                                <td class="three sub-columns"></td>
+                                                <td class="nine sub-columns">
+
+                                                </td>
+                                                <td class="expander"></td>
+                                            </tr>
                                         </table>
                                     </td>
-                                    <td class="wrapper last pt-10">
+                                    <td class="wrapper last pt-0">
                                         <table class="six columns">
                                             <tr>
                                                 <td class="nine sub-columns">
                                                     <a href="#">
-                                                        <img alt="text" src="http://software.dell.com/documents/images/10_Reasons_You_Absolutely_Need_a_Reporting_Solution_for_Active_Directory_to_Pass_Audits.jpg" class="img-responsive img-border" />
+                                                        <img alt="text" src="http://software.dell.com/documents/images/10_Reasons_You_Absolutely_Need_a_Reporting_Solution_for_Active_Directory_to_Pass_Audits.jpg" class="img-responsive img-border" >
                                                     </a>
                                                 </td>
                                                 <td class="three sub-columns"></td>
@@ -103,6 +110,7 @@
                                                                 </td>
                                                             </tr>
                                                         </table>
+                                                        <!--<![endif]-->
                                                     </td>
                                                     <td class="expander"></td>
                                                 </tr>
@@ -124,10 +132,10 @@
                                         <td class="wrapper last">
                                             <table class="twelve columns">
                                                 <tr>
-                                                    <td class="center pt-10">
+                                                    <td class="center">
                                                         <center>
                                                             <a href="#">
-                                                                <img alt="text" src="http://software.dell.com/documents/images/10_Reasons_You_Absolutely_Need_a_Reporting_Solution_for_Active_Directory_to_Pass_Audits.jpg" class="img-responsive img-border" />
+                                                                <img alt="text" src="http://software.dell.com/documents/images/10_Reasons_You_Absolutely_Need_a_Reporting_Solution_for_Active_Directory_to_Pass_Audits.jpg" class="img-responsive img-border" >
                                                             </a>
                                                         </center>
                                                     </td>
@@ -148,7 +156,6 @@
         </td>
     </tr>
 </table>
-
 <!--Social media-->
 <table class="body">
     <tr>
@@ -206,7 +213,6 @@
         </td>
     </tr>
 </table>
-
 <!--Next steps-->
 <table class="body">
     <tr>
@@ -238,7 +244,7 @@
                                             <tr>
                                                 <td class="three sub-columns"></td>
                                                 <td class="nine sub-columns">
-                                                    <img class="img-responsive img-border" src="http://software.dell.com/images/video/small/update-your-security-hardware-using-the-dell-advantage-loyalty-program873460-small.jpg" alt=""/>
+                                                    <img class="img-border" src="http://software.dell.com/images/video/small/update-your-security-hardware-using-the-dell-advantage-loyalty-program873460-small.jpg" alt="" class="img-responsive img-border" />
                                                 </td>
                                                 <td class="expander"></td>
                                             </tr>
@@ -253,8 +259,7 @@
                                                 <td class="three sub-columns"></td>
                                                 <td class="nine sub-columns">
                                                     <p>
-                                                        The goal of intelligent server monitoring is to identify when a problem starts
-                                                        and isolate its cause with detailed metrics and real-time dashboard graphics.
+                                                        The goal of intelligent server monitoring is to identify when a problem starts and isolate its cause with detailed metrics and real-time dashboard graphics.
                                                     </p>
                                                 </td>
                                                 <td class="expander"></td>
@@ -265,7 +270,7 @@
                                         <table class="six columns">
                                             <tr>
                                                 <td class="nine sub-columns">
-                                                    <img class="img-responsive img-border" src="http://software.dell.com/images/video/small/get-the-highest-level-of-protection-with-continuous-threat-research-fr872759-small.jpg" alt=""/>
+                                                    <img class="img-border" src="http://software.dell.com/images/video/small/get-the-highest-level-of-protection-with-continuous-threat-research-fr872759-small.jpg" class="img-responsive img-border" alt=""/>
                                                 </td>
                                                 <td class="three sub-columns"></td>
                                                 <td class="expander"></td>
@@ -280,8 +285,7 @@
                                             <tr>
                                                 <td class="nine sub-columns">
                                                     <p>
-                                                        A global systems integrator needed to manage multiple cloud services for
-                                                        government clients with a platform that would also accommodate long-term growth.
+                                                        A global systems integrator needed to manage multiple cloud services for government clients with a platform that would also accommodate long-term growth.
                                                     </p>
                                                 </td>
                                                 <td class="three sub-columns"></td>
@@ -301,7 +305,7 @@
                                             <table class="twelve columns">
                                                 <tr>
                                                     <td>
-                                                        <!--[if !mso]><!-->
+
                                                         <table class="row">
                                                             <tbody>
                                                             <tr>
@@ -310,7 +314,7 @@
                                                                         <tr>
                                                                             <td class="three sub-columns"></td>
                                                                             <td class="six sub-columns">
-                                                                                <img class="img-responsive img-border" src="http://software.dell.com/images/video/small/update-your-security-hardware-using-the-dell-advantage-loyalty-program873460-small.jpg" alt=""/>
+                                                                                <img class="img-border" src="http://software.dell.com/images/video/small/update-your-security-hardware-using-the-dell-advantage-loyalty-program873460-small.jpg" class="img-responsive img-border" alt=""/>
                                                                             </td>
                                                                             <td class="three sub-columns"></td>
                                                                             <td class="expander"></td>
@@ -318,9 +322,7 @@
                                                                         <tr>
                                                                             <td class="three sub-columns"></td>
                                                                             <td class="six sub-columns">
-                                                                                <a href="#" class="text-size-15">
-                                                                                    The keys to intelligent server monitoring
-                                                                                </a>
+                                                                                <a href="#" class="text-size-15">The keys to intelligent server monitoring</a>
                                                                             </td>
                                                                             <td class="three sub-columns"></td>
                                                                             <td class="expander"></td>
@@ -329,8 +331,7 @@
                                                                             <td class="three sub-columns"></td>
                                                                             <td class="six sub-columns">
                                                                                 <p>
-                                                                                    The goal of intelligent server monitoring is to identify when a problem starts
-                                                                                    and isolate its cause with detailed metrics and real-time dashboard graphics.
+                                                                                    The goal of intelligent server monitoring is to identify when a problem starts and isolate its cause with detailed metrics and real-time dashboard graphics.
                                                                                 </p>
                                                                             </td>
                                                                             <td class="six sub-columns"></td>
@@ -341,7 +342,7 @@
                                                             </tr>
                                                             </tbody>
                                                         </table>
-                                                        <!--<![endif]-->
+
                                                     </td>
                                                     <td class="expander"></td>
                                                 </tr>
@@ -356,7 +357,7 @@
                                             <table class="twelve columns">
                                                 <tr>
                                                     <td>
-                                                        <!--[if !mso]><!-->
+
                                                         <table class="row">
                                                             <tbody>
                                                             <tr>
@@ -365,7 +366,7 @@
                                                                         <tr>
                                                                             <td class="three sub-columns"></td>
                                                                             <td class="six sub-columns">
-                                                                                <img class="img-responsive img-border" src="http://software.dell.com/images/video/medium/get-the-highest-level-of-protection-with-continuous-threat-research-fr872759-medium.jpg" alt=""/>
+                                                                                <img class="img-border" src="http://software.dell.com/images/video/small/get-the-highest-level-of-protection-with-continuous-threat-research-fr872759-small.jpg" class="img-responsive img-border" alt=""/>
                                                                             </td>
                                                                             <td class="three sub-columns"></td>
                                                                             <td class="expander"></td>
@@ -384,8 +385,7 @@
                                                                             <td class="three sub-columns"></td>
                                                                             <td class="six sub-columns">
                                                                                 <p>
-                                                                                    A global systems integrator needed to manage multiple cloud services for
-                                                                                    government clients with a platform that would also accommodate long-term growth.
+                                                                                    A global systems integrator needed to manage multiple cloud services for government clients with a platform that would also accommodate long-term growth.
                                                                                 </p>
                                                                             </td>
                                                                             <td class="six sub-columns"></td>
@@ -396,7 +396,7 @@
                                                             </tr>
                                                             </tbody>
                                                         </table>
-                                                        <!--<![endif]-->
+
                                                     </td>
                                                     <td class="expander"></td>
                                                 </tr>
