Fixed some spacing issues

--- a/emails/elnaz/auto-responder/in-person-event.htm
+++ b/emails/elnaz/auto-responder/in-person-event.htm
@@ -205,7 +205,7 @@
         <table class="container">
           <tr>
             <td>
-              <table class="row text-size-13 mt-15 mb-15">
+              <table class="row text-size-13 mt-20 mb-15">
                 <tr>
                   <td class="wrapper last valign-middle">
                     <table class="twelve columns">
@@ -213,25 +213,26 @@
                         <td class="center">
                           <span class="mr-20 valign-super">Share</span>
                           <!--[if gte mso 9]>
-                          <img src="http://software.dell.com/images/email/blank.gif" width="10">
+                          <img src="http://software.dell.com/images/email/blank.gif" width="20">
                           <![endif]-->
                           <a href="https://plus.google.com/+DellSoftware/posts" class="inline-block mr-20">
                             <img src="http://stage.software.dell.com/images/email/icon-google.png" alt="google"/>
                           </a>
                           <!--[if gte mso 9]>
-                          <img src="http://software.dell.com/images/email/blank.gif" width="10">
+                          <img src="http://software.dell.com/images/email/blank.gif" width="20">
                           <![endif]-->
                           <a href="https://twitter.com/DellSoftware" class="inline-block mr-20">
                             <img src="http://stage.software.dell.com/images/email/icon-twitter.png" alt="twitter"/>
                           </a>
                           <!--[if gte mso 9]>
-                          <img src="http://software.dell.com/images/email/blank.gif" width="10">
+                          <img src="http://software.dell.com/images/email/blank.gif" width="20">
                           <![endif]-->
-                          <a href="https://www.linkedin.com/company/dell-software?trk=biz-brand-tree-co-logo" class="inline-block mr-20">
+                          <a href="https://www.linkedin.com/company/dell-software?trk=biz-brand-tree-co-logo"
+                             class="inline-block mr-20">
                             <img src="http://stage.software.dell.com/images/email/icon-linkedin.png" alt="linkedin"/>
                           </a>
                           <!--[if gte mso 9]>
-                          <img src="http://software.dell.com/images/email/blank.gif" width="10">
+                          <img src="http://software.dell.com/images/email/blank.gif" width="20">
                           <![endif]-->
                           <a href="https://www.facebook.com/dellsoftware" class="inline-block">
                             <img src="http://stage.software.dell.com/images/email/icon-facebook.png" alt="facebook"/>
@@ -252,6 +253,12 @@
       </center>
     </td>
   </tr>
+  <!--[if gte mso 9]>
+  <tr>
+    <td><img src="http://software.dell.com/images/email/blank.gif" height="10"></td>
+    <td><img src="http://software.dell.com/images/email/blank.gif" height="10"></td>
+  </tr>
+  <![endif]-->
 </table>
 <!--Next steps-->
 <table class="body">
